<resources xmlns:tools="http://schemas.android.com/tools">
        <string name="demo_app_product_name">环信即时通讯产品</string>
        <string name="username">用户名</string>
        <string name="save">保存</string>
        <string name="required">必填</string>
        <string name="submit">提交</string>
        <string name="cancel">取消</string>
        <string name="confirm">确定</string>
        <string name="loading">加载中&#8230;</string>
        <string name="request">请求中&#8230;</string>
        <string name="finish">完成</string>
        <string name="em_main_title_home">会话</string>
        <string name="em_main_title_friends">通讯录</string>
        <string name="em_main_title_discover">发现</string>
        <string name="em_main_title_me">我</string>
        <string name="demo_title_image_grid">拍摄及视频</string>
        <string name="em_dialog_default_title">提示</string>
        <string name="main_home">首页</string>
        <string name="main_friend">联系人</string>
        <string name="main_set">设置</string>
        <string name="em_login_name_hint">用户名</string>
        <string name="em_login_password_hint">密码</string>
        <string name="em_login_token_hint">token</string>
        <string name="em_login_btn">登\u0020录</string>
        <string name="em_login_tv_register">注册账号</string>
        <string name="em_login_tv_token">token登录</string>
        <string name="em_login_tv_pwd">密码登录</string>
        <string name="em_login_tv_server_set">服务器配置</string>
        <string name="em_login_btn_info_incomplete">用户名或者密码不能为空</string>
        <string name="em_login_failed">登录失败</string>
        <string name="em_login_agreement">同意《环信服务条款》与《环信隐私协议》</string>
        <string name="the_current_network">当前网络不可用，请检查网络设置</string>
        <string name="em_register_btn">注\u0020册</string>
        <string name="em_register_password_confirm_hint">确认密码</string>
        <string name="em_register_failed">注册失败</string>
        <string name="em_register_success">注册成功，请登录</string>
        <string name="em_register_privacy_agreement_url">http://www.easemob.com/protocol</string>
        <string name="em_register_service_agreement_url">http://www.easemob.com/agreement</string>
        <string name="em_password_confirm_error">您输入的密码不一致，请重新输入</string>
        <string name="em_error_network_error">当前网络不可用</string>
        <string name="em_error_not_login">未登录过环信</string>
        <string name="em_error_parse_error">解析错误</string>
        <string name="em_error_err_unknown">网络问题请稍后重试</string>
        <string name="em_err_image_android_min_version">上传图片只支持4.4版本以上</string>
        <string name="em_err_file_not_exist">文件不存在</string>
        <string name="em_add_self_error">不能添加自己</string>
        <string name="em_friend_error">此用户已是你的好友</string>
        <string name="em_friend_black_error">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
        <string name="em_delete_sys_msg_error">删除失败或不存在该消息</string>
        <string name="em_error_group_no_members">没有群组成员</string>
        <string name="em_error_user_already_exist">注册用户名已存在，请重新输入</string>
        <string name="demo_error_user_authentication_failed">您输入的用户名或密码不正确</string>
        <string name="demo_error_user_already_exist">注册用户名已存在，请重新输入</string>
        <string name="demo_error_file_too_large">附件大小不能超过10M</string>
        <string name="em_server_set_title">使用自定义服务器？</string>
        <string name="em_server_set_server_hint">demo已经绑定以下环境设置，如果需要修改，请重启App进行设置。</string>
        <string name="em_server_set_appkey">Appkey</string>
        <string name="em_server_set_apns_cert_name">apns证书名称</string>
        <string name="em_server_set_specify_server">使用私有服务器:</string>
        <string name="em_server_set_server_address">IM服务器地址</string>
        <string name="em_server_set_server_port">端口号</string>
        <string name="em_server_set_rest_server_address">REST服务器地址</string>
        <string name="em_server_set_https_set">只使用Https:</string>
        <string name="em_server_set_button_reset_text">重置服务器设置</string>
        <string name="em_server_set_dialog_reset">是否恢复默认服务器设置？</string>
        <string name="em_server_set_button_text">保\u0020存\u0020配\u0020置</string>
        <string name="em_server_set_appkey_empty_hint">请设置Appkey</string>
        <string name="em_server_set_im_server_empty_hint">请设置IM服务器地址</string>
        <string name="em_server_set_im_port_empty_hint">请设置IM端口号</string>
        <string name="em_server_set_rest_server_empty_hint">请设置REST服务器地址</string>
        <string name="em_empty_layout_content">寻找自我 保持本色</string>
        <string name="were_mentioned">[有人@我]</string>
        <string name="were_not_send_msg">[草稿]</string>
        <string name="em_chat_et_hint">输入了什么东西</string>
        <string name="em_search_text_hint">搜索</string>
        <string name="em_conversation_menu_video">音视频会议</string>
        <string name="em_conversation_menu_group">创建群组</string>
        <string name="em_conversation_menu_friend">添加好友</string>
        <string name="em_conversation_menu_search_friend">添加好友</string>
        <string name="em_conversation_menu_search_group">找群</string>
        <string name="em_conversation_menu_scan">扫一扫</string>
        <string name="em_conversation_system_notification">系统通知</string>
        <string name="demo_system_agree_invite">您已同意%1$s的好友请求</string>
        <string name="demo_system_agree_remote_user_apply_to_join_group">您已同意%1$s的入群申请</string>
        <string name="demo_system_agree_received_remote_user_invitation">您已同意%1$s的入群邀请</string>
        <string name="demo_system_decline_invite">您已拒绝%1$s的好友请求</string>
        <string name="demo_system_decline_remote_user_apply_to_join_group">您已拒绝%1$s的入群申请</string>
        <string name="demo_system_decline_received_remote_user_invitation">您已拒绝%1$s的入群邀请</string>
        <string name="demo_system_other_decline_invite">%1$s拒绝了您的好友请求</string>
        <string name="demo_system_other_decline_remote_user_apply_to_join_group">%1$s拒绝了您的入群申请</string>
        <string name="demo_system_other_decline_received_remote_user_invitation">%1$s拒绝了您的入群邀请</string>
        <string name="em_add_contact_item_button_text">添加好友</string>
        <string name="em_add_contact_item_button_text_added">已添加</string>
        <string name="em_add_contact_not_add_myself">不能添加自己</string>
        <string name="em_add_contact_user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
        <string name="em_add_contact_this_user_is_already_your_friend">此用户已是你的好友</string>
        <string name="em_add_contact_add_a_friend">加个好友呗</string>
        <string name="em_add_contact_send_successful">已发送好友邀请</string>
        <string name="em_friends_new_chat">新的好友</string>
        <string name="em_friends_group_chat">群聊</string>
        <string name="em_friends_label">标签</string>
        <string name="em_friends_chat_room">聊天室</string>
        <string name="em_friends_official_account">公众号</string>
        <string name="em_friends_av_conference">音视频会议</string>
        <string name="em_friends_move_into_the_blacklist_new">移入到黑名单</string>
        <string name="em_friends_move_out_the_blacklist_new">移出黑名单</string>
        <string name="em_friends_move_out_the_blacklist_hint">是否移出黑名单？</string>
        <string name="em_friends_move_into_blacklist_success">已将用户加入黑名单</string>
        <string name="em_friends_move_out_blacklist_success">已将用户移出黑名单</string>
        <string name="em_friends_detail_title">个人资料</string>
        <string name="em_friends_detail_note">设置备注</string>
        <string name="em_friends_detail_chat">发消息</string>
        <string name="em_friends_detail_voice">语音通话</string>
        <string name="em_friends_detail_video">视频通话</string>
        <string name="em_friends_detail_add_contact">添加到通讯录</string>
        <string name="em_friends_detail_add_black">加入黑名单</string>
        <string name="em_friends_group_contact_manage">我管理的</string>
        <string name="em_friends_group_contact_participate">我参与的</string>
        <string name="em_friends_group_contact_title">群组列表</string>
        <string name="em_friends_group_public">公开群</string>
        <string name="em_friends_group_join">群组列表</string>
        <string name="em_friends_chat_room_contact_title">聊天室列表</string>
        <string name="em_friends_chat_room_create">创建聊天室</string>
        <string name="demo_contact_add_black">%1$s已添加至黑名单</string>
        <string name="em_chat_pick_user_title">选择联系人</string>
        <string name="em_chat_delete_title">确认删除？</string>
        <string name="em_single_set_title">聊天详情</string>
        <string name="em_single_search_history">查找聊天记录</string>
        <string name="em_single_clear_history">清空聊天记录</string>
        <string name="em_single_conversation_top">会话置顶</string>
        <string name="em_single_call_type">选择通话类型</string>
        <string name="em_chat_delete_conversation">您确认要清空所有聊天记录吗？</string>
        <string name="em_chat_group_detail_title">群组信息</string>
        <string name="em_chat_group_detail_group_member">群成员</string>
        <string name="em_chat_group_detail_member_num">%1$d人</string>
        <string name="em_chat_group_detail_name">群名称</string>
        <string name="em_chat_group_detail_share_file">共享文件</string>
        <string name="em_chat_group_detail_announcement">群公告</string>
        <string name="em_chat_group_detail_announcement_hint">请输入群公告</string>
        <string name="em_chat_group_detail_history">查找聊天记录</string>
        <string name="em_chat_group_detail_clear_history">清空聊天记录</string>
        <string name="em_chat_group_detail_clear_history_warning">您确认要清空所有聊天记录吗？</string>
        <string name="em_chat_group_detail_member_manage">群组管理</string>
        <string name="em_chat_group_detail_introduction">群介绍</string>
        <string name="em_chat_group_detail_introduction_hint">请输入群介绍</string>
        <string name="em_chat_group_detail_not_disturb">消息免打扰</string>
        <string name="em_chat_group_detail_off_push">屏蔽离线消息推送</string>
        <string name="em_chat_group_detail_top">会话置顶</string>
        <string name="em_chat_group_detail_refund">退出群组</string>
        <string name="em_chat_group_detail_dissolve">解散群组</string>
        <string name="em_chat_group_save">保存</string>
        <string name="em_chat_group_shared_files_upload">上传</string>
        <string name="em_chat_group_invite_group_member">邀请成员</string>
        <string name="em_chat_group_select_contact">选择联系人</string>
        <string name="em_chat_group_select_contact_save">保存</string>
        <string name="em_chat_group_delivery_ack">群组回执</string>
        <string name="em_chat_group_read_ack">阅读回执</string>
        <string name="em_chat_group_read_ack_send">发送</string>
        <string name="em_chat_group_read_ack_hint">请输入需要回执的消息内容</string>
        <string name="em_chat_group_black_manage">黑名单管理</string>
        <string name="em_chat_group_mute_manage">禁言管理</string>
        <string name="em_chat_group_authority_transfer">管理员/群主移交</string>
        <string name="em_group_member_type_title">群成员</string>
        <string name="em_group_member_type_admin">群管理员</string>
        <string name="em_group_member_type_member">群成员</string>
        <string name="em_group_member_type_member_num">共%1$d人</string>
        <string name="demo_group_member_add_admin">%1$s已成为新的管理员</string>
        <string name="demo_group_member_remove_admin">%1$s已被移出管理员</string>
        <string name="demo_group_member_add_black">%1$s已被添加至黑名单</string>
        <string name="demo_group_member_remove_black">%1$s已被移出黑名单</string>
        <string name="demo_group_member_mute">%1$s已被禁言</string>
        <string name="demo_group_member_remove_mute">%1$s已被解除禁言</string>
        <string name="em_about_me_set">设置</string>
        <string name="em_set_privacy">隐私</string>
        <string name="button_logout">退出登录</string>
        <string name="security">账号与安全</string>
        <string name="notify">新消息提醒</string>
        <string name="general">通用</string>
        <string name="help">帮助与反馈</string>
        <string name="about">关于</string>
        <string name="me_info">个人信息</string>
</resources>