<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_title_bar_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBarTitle="@string/em_about_me_set"
        android:background="@color/white"
        app:titleBarDisplayHomeAsUpEnabled="true"/>


    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_me_info"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/me_info"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>


    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_notify"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_me_info"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/notify"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>

    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
    android:id="@+id/setting_general"
    android:layout_width="0dp"
    android:layout_height="@dimen/em_common_item_height"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/setting_notify"
    android:layout_marginTop="@dimen/em_margin_20"
    app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
    app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
    app:arrowItemTitle="@string/general"
    app:arrowItemTitleSize="@dimen/em_size_normal"
    android:foreground="@drawable/demo_ripple_click_gray"
    android:background="@color/white"/>



    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_privacy"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_general"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/em_set_privacy"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>




    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_security"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_privacy"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/security"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>





    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_help"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_security"
        android:layout_marginTop="@dimen/em_margin_20"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/help"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>




    <com.cloud.xtilus.makingfriends.common.widget.ArrowItemView
        android:id="@+id/setting_about"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_help"
        app:arrowItemAvatarHeight="@dimen/em_about_me_avatar_size"
        app:arrowItemAvatarWidth="@dimen/em_about_me_avatar_size"
        app:arrowItemTitle="@string/about"
        app:arrowItemTitleSize="@dimen/em_size_normal"
        android:foreground="@drawable/demo_ripple_click_gray"
        android:background="@color/white"/>





    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_about"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/button_logout"
        android:textColor="@color/em_color_common_text_black"
        android:textSize="@dimen/em_size_normal" />



</androidx.constraintlayout.widget.ConstraintLayout>


